--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -124,21 +126,9 @@ h3{
     
 }
 
-.html-details, .css-details{
-    margin-bottom: 5%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2%;
 
-}
 
-.right{
-    padding: 5%;
-}
-.left{
-    padding: 5%;
-}
+
 
 
 
@@ -165,6 +155,7 @@ h3{
 }
 
 .skills{
+    
     padding: 5% 10%;
     background-color: rgb(250, 215, 228);
 }
@@ -173,8 +164,38 @@ h3{
     padding: 5%;
 }
 .aboutme-details p{
-    font-size: 18px;
+    font-family: "Roboto Slab", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 22px;
+    line-height: 30px;
 }
 .aboutme-details h1{
+    font-family: "Roboto Slab", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
     margin-bottom: 2%;
+}
+
+
+/* About page */
+.about-section-title{
+    margin-bottom: 5%;
+}
+
+.right, .left{
+    padding: 4%;
+}
+
+.html-details, .css-details, .js-details{
+    margin-bottom: 5%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2%;
+    border: 1px solid rgb(140, 221, 224);
+    border-radius: 10px;
+
 }
