--- a/css/style.css
+++ b/css/style.css
@@ -279,3 +279,39 @@ span{
 .flex-btn:hover{
         box-shadow: 0px 4px 15px rgba(129, 186, 233, 0.7); 
     }
+
+
+
+    /* Grid page */
+.grid-section {
+    margin-bottom: 5%;
+}
+
+.grid-wrap {
+    padding: 0 10%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 20px 5%; 
+}
+
+.grid-item {
+    padding: 2%;
+    border: 1px solid black;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.grid-item p {
+    padding: 2% 17%;
+    text-align: left;
+}
+
+.left-item {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
