--- a/css/style.css
+++ b/css/style.css
@@ -106,12 +106,13 @@ h3{
     padding: 5px;
     width: 220px;
     height: 45px;
-    background-color: yellow;
+    background-color: rgb(0, 217, 255);
+    border: 1px solid rgb(69, 178, 218);
     border-radius: 5px;
 }
 .hero-btn:hover{
     
-    box-shadow: 0px 4px 15px rgba(233, 219, 129, 0.7); 
+    box-shadow: 0px 4px 15px rgba(129, 186, 233, 0.7); 
 }
 
 .hero-btn a{
@@ -314,4 +315,42 @@ span{
     flex-direction: column;
     text-align: center;
     align-items: center;
+}
+
+
+/* Grid page */
+.img-gallery{
+    margin-bottom: 5%;
+}
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: auto;
+    grid-auto-flow: dense;
+    gap: 6px;
+    padding: 0 10%;
+    margin-bottom: 5%;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+img.four-grid-cells {
+    grid-row: span 2 / auto;
+    grid-column: span 2 / auto;
+}
+
+img.wide-image {
+    grid-column: span 2 / auto;
+}
+
+.header-part{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5%;
 }
