--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ a{
 }
 nav{
     height: 90px;
-    background-color: #6fe4ecdd;
+    background-color:rgb(0, 217, 255);
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     
 }
